[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/laigter_tools/scenes/dock_preview.gd" type="Script" id=1]

[node name="LaigterPreviewDock" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -900.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MarginContainer"]
self_modulate = Color( 1, 1, 1, 0.352941 )
margin_right = 900.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_right = 900.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 900.0
margin_bottom = 542.0
rect_min_size = Vector2( 100, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="PreviewGrid" type="GridContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 900.0
margin_bottom = 542.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 550.0
margin_right = 900.0
margin_bottom = 570.0
custom_constants/separation = 11

[node name="SaveImages" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 841.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Save selected..."

[node name="Reset" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 852.0
margin_right = 900.0
margin_bottom = 20.0
text = "Reset"

[node name="ScanForChanges" type="Timer" parent="."]
